--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,32 @@
+body {
+  margin: 0;
+  padding: 0;
+  /* Otros estilos reset */
+}
 
+h1 {
+  font-size: 24px;
+  /* Otros estilos de encabezados */
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  font-size: 4rem;
+}
+.footer .copy {
+  display: flex;
+  justify-content: center;
+  font-size: 1rem;
+  padding: 50px;
+}
+.footer .redes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  margin-top: 2rem;
+  flex-wrap: wrap;
+}
 
 /*# sourceMappingURL=style.css.map */
