--- a/scss/base/tipografias.scss
+++ b/scss/base/tipografias.scss
@@ -1,5 +1,26 @@
-// Estilos de tipografías
-h1 {
-    font-size: 24px;
-    /* Otros estilos de encabezados */
+// INICIO INDEX 
+
+.titulo {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 80px;
+    margin-bottom: 50px;
+
+    h3 {
+        text-align: center;
+        font-size: xx-large;
+    }
+
+    small {
+        font-size: large;
+
+        &.text-body-secondary {
+            color: #888;
+        }
+
+        &.text-center {
+            text-align: center;
+        }
+    }
 }
