--- a/scss/base/tipografias.scss
+++ b/scss/base/tipografias.scss
@@ -9,11 +9,11 @@
 
     h3 {
         text-align: center;
-        font-size: xx-large;
+        font-size: x-large;
     }
 
     small {
-        font-size: large;
+        font-size:medium;
 
         &.text-body-secondary {
             color: #888;
@@ -23,4 +23,9 @@
             text-align: center;
         }
     }
+}
+
+//PORTAFOLIO
+.foto .overlay {
+    color: white;
 }
