--- a/scss/views/_acerca_de_mi.scss
+++ b/scss/views/_acerca_de_mi.scss
@@ -1,2 +1,50 @@
+.cont_foto {
+    text-align: center;
+    margin-bottom: 100px;
+}
 
+.mi_foto {
+    display: flex;
+    justify-content: center;
+    max-width: 1200px;
+    flex-wrap: wrap;
+    border-radius: 500px;
+    height: 500px;
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+main {
+    text-align: center;
+}
+
+main p {
+    text-align: justify;
+    padding: 0 20px;
+}
+
+@media (max-width: 768px) {
+    .mi_foto {
+        height: 80px;
+        width: 80px;
+    }
+
+    main p {
+        text-align: justify;
+        padding: 0 10px;
+    }
+}
+
+@media (max-width: 480px) {
+    .mi_foto {
+        height: 60px;
+        width: 60px;
+    }
+
+    main p {
+        text-align: justify;
+        padding: 0 5px;
+    }
+}
 
