Se crea un nuevo archivo _logo.scss

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,6 +11,7 @@
 
 @import './components/footer';
 @import './components/navegacion';
+@import './components/logo';
 
 @import './views/home';
 @import './views/portafolio';
