--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,10 @@ hr {
   flex-wrap: wrap;
 }
 
+a {
+  color: grey;
+}
+
 .carousel {
   width: 100vw;
   max-width: 100%;
@@ -59,9 +63,9 @@ hr {
 }
 
 .logo {
-  border-radius: 200px;
-  height: 200px;
-  width: 200px;
+  border-radius: 50%;
+  height: 150px;
+  width: 150px;
   padding: 20px;
 }
 
@@ -115,23 +119,25 @@ img {
 .galeria {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .foto {
   display: flex;
-  flex-wrap: wrap;
+  align-items: center;
+  flex-direction: column;
   position: relative;
   overflow: hidden;
-  padding: 3px;
-  margin-bottom: 0%;
+  padding: 10px;
+  margin: 10px;
 }
 
 .foto img {
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: cover;
-  transition: transform 0.3s;
   border-radius: 5%;
+  aspect-ratio: 1;
 }
 
 .foto .overlay {
@@ -161,18 +167,21 @@ img {
   .foto {
     width: 100%;
     margin: 10px 0;
+    padding: 5px;
   }
 }
 @media (min-width: 481px) and (max-width: 1024px) {
   .foto {
     width: 45%;
     margin: 10px;
+    padding: 10px;
   }
 }
 @media (min-width: 1025px) {
   .foto {
     width: 45%;
     margin: 10px;
+    padding: 10px;
   }
 }
 .cont_foto {
@@ -183,13 +192,20 @@ img {
 .mi_foto {
   display: flex;
   justify-content: center;
-  max-width: 1200px;
-  flex-wrap: wrap;
-  border-radius: 500px;
+  align-items: center;
+  max-width: 500px;
   height: 500px;
   width: 500px;
-  margin-left: auto;
-  margin-right: auto;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 0 auto;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.mi_foto img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 main {
@@ -203,8 +219,12 @@ main p {
 
 @media (max-width: 768px) {
   .mi_foto {
-    height: 80px;
-    width: 80px;
+    height: 100px;
+    width: 100px;
+  }
+  .mi_foto img {
+    max-width: 100%;
+    height: auto;
   }
   main p {
     text-align: justify;
@@ -213,12 +233,12 @@ main p {
 }
 @media (max-width: 480px) {
   .mi_foto {
-    height: 60px;
-    width: 60px;
+    height: 100px;
+    width: 100px;
   }
-  main p {
-    text-align: justify;
-    padding: 0 5px;
+  .mi_foto img {
+    max-width: 100%;
+    height: auto;
   }
 }
 .formulario {
