--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -1,6 +1,6 @@
 .logo {
-    border-radius: 200px;
-    height: 200px;
-    width: 200px;
+    border-radius: 50%;
+    height: 150px;
+    width: 150px;
     padding: 20px;
 }
