--- a/scss/views/_acerca_de_mi.scss
+++ b/scss/views/_acerca_de_mi.scss
@@ -6,13 +6,20 @@
 .mi_foto {
     display: flex;
     justify-content: center;
-    max-width: 1200px;
-    flex-wrap: wrap;
-    border-radius: 500px;
+    align-items: center; 
+    max-width: 500px; 
     height: 500px;
     width: 500px;
-    margin-left: auto;
-    margin-right: auto;
+    border-radius: 50%; 
+    overflow: hidden; 
+    margin: 0 auto; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+}
+
+.mi_foto img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 main {
@@ -26,8 +33,13 @@ main p {
 
 @media (max-width: 768px) {
     .mi_foto {
-        height: 80px;
-        width: 80px;
+        height: 100px;
+        width: 100px;
+    }
+
+    .mi_foto img {
+        max-width: 100%;
+        height: auto;
     }
 
     main p {
@@ -38,13 +50,16 @@ main p {
 
 @media (max-width: 480px) {
     .mi_foto {
-        height: 60px;
-        width: 60px;
+        height: 100px;
+        width: 100px;
     }
 
-    main p {
-        text-align: justify;
-        padding: 0 5px;
+    .mi_foto img {
+        max-width: 100%;
+        height: auto;
     }
 }
+
+
+
 
