--- a/scss/views/_portafolio.scss
+++ b/scss/views/_portafolio.scss
@@ -1,23 +1,25 @@
 .galeria {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .foto {
     display: flex;
-    flex-wrap: wrap;
+    align-items: center;
+    flex-direction: column;
     position: relative;
     overflow: hidden;
-    padding: 3px;
-    margin-bottom: 0%;
+    padding: 10px; 
+    margin: 10px; 
 }
 
 .foto img {
-    width: 100%;
-    height: 100%;
+    width: 100%; 
+    height: auto;
     object-fit: cover;
-    transition: transform 0.3s;
     border-radius: 5%;
+    aspect-ratio: 1; 
 }
 
 .foto .overlay {
@@ -43,11 +45,13 @@
     opacity: 1;
 }
 
+
+
 @media (max-width: 480px) {
     .foto {
         width: 100%;
         margin: 10px 0;
-
+        padding: 5px; 
     }
 }
 
@@ -55,6 +59,7 @@
     .foto {
         width: 45%;
         margin: 10px;
+        padding: 10px; 
     }
 }
 
@@ -62,5 +67,6 @@
     .foto {
         width: 45%;
         margin: 10px;
+        padding: 10px; 
     }
 }
