--- a/scss/views/_portafolio.scss
+++ b/scss/views/_portafolio.scss
@@ -10,16 +10,16 @@
     flex-direction: column;
     position: relative;
     overflow: hidden;
-    padding: 10px; 
-    margin: 10px; 
+    padding: 10px;
+    margin: 10px;
 }
 
 .foto img {
-    width: 100%; 
+    width: 100%;
     height: auto;
     object-fit: cover;
     border-radius: 5%;
-    aspect-ratio: 1; 
+    aspect-ratio: 1;
 }
 
 .foto .overlay {
@@ -34,6 +34,7 @@
     justify-content: center;
     opacity: 0;
     transition: opacity 0.3s;
+    text-align: center;
 }
 
 .foto:hover img {
@@ -45,28 +46,26 @@
     opacity: 1;
 }
 
-
-
 @media (max-width: 480px) {
     .foto {
         width: 100%;
         margin: 10px 0;
-        padding: 5px; 
+        padding: 5px;
     }
 }
 
 @media (min-width: 481px) and (max-width: 1024px) {
     .foto {
-        width: 45%;
+        width: 20%;
         margin: 10px;
-        padding: 10px; 
+        padding: 10px;
     }
 }
 
 @media (min-width: 1025px) {
     .foto {
-        width: 45%;
+        width: 20%;
         margin: 10px;
-        padding: 10px; 
+        padding: 10px;
     }
 }
