Se camv¿bia color al boton enviar y de las redes. Se ajusta nav

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ hr {
 .titulo h3 {
   text-align: center;
   font-size: x-large;
+  margin-bottom: 30px;
 }
 .titulo small {
   font-size: medium;
@@ -37,7 +38,7 @@ hr {
 .footer .copy {
   display: flex;
   justify-content: center;
-  font-size: 1rem;
+  font-size: 15px;
   padding: 50px;
 }
 .footer .redes {
@@ -49,8 +50,14 @@ hr {
   flex-wrap: wrap;
 }
 
-a {
-  color: grey;
+.redes a i {
+  font-size: 40px;
+  color: #00a873;
+}
+
+.color {
+  background-color: #00a873;
+  border: #00a873;
 }
 
 .carousel {
