--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,11 @@ hr {
 .footer .copy {
   display: flex;
   justify-content: center;
-  font-size: 15px;
+  font-size: 10px;
   padding: 50px;
+}
+.footer .copy p {
+  align-items: center;
 }
 .footer .redes {
   display: flex;
